# ehson_bot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 3d7b6e4f1a2c_add_expenses_table.py  5e8a3f2c7d19_structured_bank_account_fields.py  6a2e9c5d8f01_add_bank_account_settings.py  7b1d4e9a3c56_treasurer_baseline_role_and_payment_sessions.py  8f3c1a9d2b4e_initial_schema.py  9c4f2a1e6b7d_pending_role_default.py  9d3f7a2b5e14_pending_payments_manual_review.py  b7c2e9f14a83_anonymous_display_name.py  c4a9d6e2f710_remove_pending_payments.py
src/ehson_bot/: __init__.py  __main__.py
src/ehson_bot/application/: __init__.py
src/ehson_bot/application/use_cases/: confirm_payment.py  confirm_pending_payment.py  get_period_report.py  list_recent_entries.py  record_donation.py  record_expense.py  reject_pending_payment.py  remove_donation.py  remove_expense.py  request_payment.py  submit_pending_payment.py
src/ehson_bot/domain/: __init__.py  entities.py  exceptions.py  repositories.py  value_objects.py
src/ehson_bot/infrastructure/: __init__.py  config.py  scheduler.py  timeutil.py
src/ehson_bot/infrastructure/db/: base.py  models.py  repositories.py  session.py
src/ehson_bot/interfaces/: __init__.py
tests/integration/: conftest.py  test_bank_account_repository.py  test_bot_user_repository.py  test_donation_repository.py  test_expense_repository.py  test_payment_session_repository.py  test_pending_payment_repository.py
tests/unit/application/: test_confirm_payment.py  test_confirm_pending_payment.py  test_get_period_report.py  test_list_recent_entries.py  test_record_donation.py  test_reject_pending_payment.py  test_request_payment.py  test_submit_pending_payment.py
tests/unit/domain/: test_expense.py  test_value_objects.py
tests/unit/infrastructure/: test_mock_provider.py  test_scheduler.py
tests/unit/interfaces/: test_anonymous_name.py  test_common.py  test_payments.py
(+14 files in other folders)
